--- a/frontend/src/components/layout/HeroSection.css
+++ b/frontend/src/components/layout/HeroSection.css
@@ -16,7 +16,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('../../assets/heroimage.jpg');
+  background-image: url("../../assets/heroimage.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
