--- a/frontend/src/pages/AboutPage.css
+++ b/frontend/src/pages/AboutPage.css
@@ -7,7 +7,7 @@
 .hero-section {
     /* position: relative; */
     background: linear-gradient(135deg, rgba(0, 51, 102, 0.7) 0%, rgba(0, 102, 204, 0.7) 100%), 
-                url('../assets/image.png') center/cover no-repeat;
+                url("../assets/image.png") center/cover no-repeat;
     padding: 200px 0;
     color: white;
     margin-bottom: 40px;
