--- a/frontend/src/components/layout/HeroSection.css
+++ b/frontend/src/components/layout/HeroSection.css
@@ -16,10 +16,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("../../assets/heroimage.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  /* Background image is now set via inline styles in JavaScript */
   filter: brightness(0.6);
   z-index: -1;
 }
