--- a/frontend/src/pages/CategoryManagement.css
+++ b/frontend/src/pages/CategoryManagement.css
@@ -1,5 +1,4 @@
-/* CategoryManagement.css */
 .content-wrapper {
-    padding-top: 80px; /* Adjust based on your navbar height */
+    padding-top: 80px;
   }
   
