--- a/frontend/src/components/auth/SignUpPage.css
+++ b/frontend/src/components/auth/SignUpPage.css
@@ -1,6 +1,6 @@
   .signin-page {
-    background-color: #f4f4f4; /* Light grey background */
-    min-height: 100vh; /* Full viewport height */
+    background-color: #f4f4f4;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
