--- a/frontend/src/components/layout/VideoSection.css
+++ b/frontend/src/components/layout/VideoSection.css
@@ -1,7 +1,6 @@
-/* VideoSection.css */
 .video-section {
-    background-color: light; /* A nice blue background color */
-    color: black; /* White text for contrast */
+    background-color: light;
+    color: black;
     padding: 40px 20px;
   }
   
@@ -24,7 +23,7 @@
   
   .video-section .video-wrapper {
     position: relative;
-    padding-bottom: 56.25%; /* 16:9 aspect ratio */
+    padding-bottom: 56.25%;
     height: 0;
     overflow: hidden;
   }
