--- a/frontend/src/pages/AboutPage.css
+++ b/frontend/src/pages/AboutPage.css
@@ -1,10 +1,8 @@
-/* AboutUs.css */
 .about-page {
-    margin-top: 70px; /* Account for fixed navbar */
+    margin-top: 70px;
   }
   
   .hero-title {
-    /* justify-content: center; */
     font-size: 3rem;
     font-weight: bold;
     margin-bottom: 1.5rem;
@@ -38,8 +36,6 @@
     text-decoration: none;
   }
 
-  
-  /* Stats Section */
   .section-padding {
     padding: 40px 0;
   }
@@ -71,12 +67,9 @@
     font-size: 1.1rem;
   }
   
-  /* Mission Section */
   .mission-section {
-    /* color: white; */
     background-color: #003366;
     padding: 80px;
-    /* text-align: center; */
     align-items: center;
   }
   
@@ -98,7 +91,6 @@
     color: whitesmoke;
   }
   
-  /* Team Section */
   .team-card {
     border: none;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
@@ -135,7 +127,6 @@
     line-height: 1.6;
   }
   
-  /* Values Section */
   .values-section {
     background-color: #f8f9fa;
     padding: 80px 0;
@@ -161,7 +152,6 @@
     line-height: 1.6;
   }
   
-  /* CTA Section */
   .CTA-section{
     background-color: #003366;
     color: whitesmoke;
@@ -183,7 +173,6 @@
     font-weight: 500;
   }
   
-  /* Responsive Adjustments */
   @media (max-width: 768px) {
     .hero-title {
       font-size: 2rem;
